# tips_build

./: CMakeLists.txt
.svn/: all-wcprops  dir-prop-base  entries
cmake/: FindHDF5.cmake  FindWCSLIB.cmake
cmake/.svn/: all-wcprops  entries
cmake/.svn/text-base/: FindCFITSIO.cmake.svn-base  FindCFITSIO1.cmake.svn-base  FindGSL1.cmake.svn-base  FindMYSQL.cmake.svn-base  FindWCSLIB2.cmake.svn-base  UseSWIG.cmake.svn-base
cmake/modules/: CheckCCompilerFlag.cmake  CheckCSourceCompiles.cmake  FindGSL.cmake  FindWCSLIB.cmake
cmake/modules/.svn/: all-wcprops  entries
cmake/modules/.svn/text-base/: FindCFITSIO.cmake.svn-base  FindWCSLIB.cmake~.svn-base
doc/.svn/: all-wcprops  entries
python/.svn/: all-wcprops  entries
python/axesim/: __init__.py  axesimutils.py  configfile.py  imagemaker.py  inputchecker.py  modspeclist.py
python/axesim/.svn/: all-wcprops  entries
python/axesim/.svn/text-base/: WCSdata.py.svn-base  __init__.pyc.svn-base  axecommands.py.svn-base  axecommands.pyc.svn-base  axesimerror.py.svn-base  axesimerror.pyc.svn-base  axesimutils.pyc.svn-base  interpolator.py.svn-base  interpolator.pyc.svn-base  realworld.py.svn-base  simdirim.py.svn-base  simdirim.pyc.svn-base  simdispim.py.svn-base  simdispim.pyc.svn-base
python/tips/: CREDITS  README  __init__.py  tipsaxesim.py
python/tips/.svn/: all-wcprops  entries
python/tips/.svn/text-base/: AUTHORS.svn-base  __init__.pyc.svn-base  tipsaxesim.pyc.svn-base  tipserror.py.svn-base  tipsinstrument.py.svn-base  tipsobservation.py.svn-base  tipssky.py.svn-base  tipssky.pyc.svn-base
python/tips/data/.svn/: all-wcprops  entries
src/.svn/: all-wcprops  entries
src/axesim/: CMakeLists.txt  aXe_AF2PET.c  aXe_PETCONT.c  aXe_SEX2GOL.c  aXe_errors.h  aXe_grism.h  aper_check.h  dirimage_model.c  dirimage_model.h  disp_conf.h  disp_utils.c  disp_utils.h  drizzle_utils.h  fringe_conf.c  fringe_model.h  fringe_utils.h  inima_utils.c  inima_utils.h  inout_aper.c  ipixcorr_utils.c  lmmin.h  model_utils.c  model_utils.h  spc_FITScards.c  spc_FITScards.h  spc_cfg.h  spc_flatfield.h  spc_fluxcube.c  spc_fluxcube.h  spc_model.c  spc_model.h  spc_optimum.c  spc_optimum.h  spc_resp.c  spc_sex.c  spc_spc.h  spc_trace_functions.h  spc_utils.c  spc_utils.h  spce_PET.c  (+10 more)
src/axesim/.svn/: all-wcprops  entries
src/axesim/.svn/text-base/: README.svn-base  aXe_DIRIMAGE.c.svn-base  aXe_DISPIMAGE.c.svn-base  aXe_GOL2AF.c.svn-base  aXe_PET2SPC.c.svn-base  aXe_STAMPS.c.svn-base  aXe_errors.c.svn-base  aXe_utils.c.svn-base  aXe_utils.h.svn-base  aper_check.c.svn-base  aper_conf.c.svn-base  aper_conf.h.svn-base  crossdisp_utils.c.svn-base  crossdisp_utils.h.svn-base  disp_conf.c.svn-base  drizzle_utils.c.svn-base  drz2pet_utils.c.svn-base  drz2pet_utils.h.svn-base  fringe_conf.h.svn-base  fringe_model.c.svn-base  fringe_utils.c.svn-base  inout_aper.h.svn-base  ipixcorr_utils.h.svn-base  lm_eval.c.svn-base  lm_eval.h.svn-base  nicback_utils.c.svn-base  nicback_utils.h.svn-base  spc_CD.c.svn-base  spc_CD.h.svn-base  spc_back.c.svn-base  spc_back.h.svn-base  spc_cfg.c.svn-base  spc_driz.c.svn-base  spc_driz.h.svn-base  spc_extract.c.svn-base  spc_flatfield.c.svn-base  spc_resp.h.svn-base  spc_sex.h.svn-base  spc_spc.c.svn-base  spc_trace_functions.c.svn-base  (+11 more)
test/: test_Verify.py  test_integration_pp.py  testobservation.py  testsky.py
test/.svn/: all-wcprops  entries
test/.svn/text-base/: __init__.py.svn-base  test_fullsystem.py.svn-base  test_integration.py.svn-base  test_preintegration.py.svn-base  test_unit.py.svn-base  test_unitAxesim.py.svn-base  testaxesim.py.svn-base  testaxesim.pyc.svn-base  testinstrument.py.svn-base
test/HSTdata/: Dummy.G141FF.V2.5.conf  WFC3.IR.G141.V2.5.conf  WFC3.IR.G141FF.V2.5.conf
test/HSTdata/.svn/: all-wcprops  entries
test/HSTdata/.svn/text-base/: Dummy.G141.V2.5.conf.svn-base  HSTinput_cat_testI.dat.svn-base  HSTinput_cat_testII.dat.svn-base  HSTinput_cat_testV.dat.svn-base  input_cat_imgs.fits.svn-base  input_stars_imgs.fits.svn-base  wfc3_ir_f125w_tpass_m01.dat.svn-base
test/data/: CMC_test.fits  CMC_test_half.fits  GBLUE_90.0_conf_v0.fits  GRED_90.0_conf_v0.fits  axesim_d1.conf  axesim_d1_2PSF.conf  axesim_d1_PSF.conf  axesim_d1_zero.conf  axesim_d2_2PSF.conf  axesim_d2_PSF.conf  axesim_d3_PSF.conf  axesim_d3_zero.conf  axesim_d4.conf  axesim_d4_PSF.conf  axesim_d4_cos.conf  axesim_d4_zero.conf  baseline_180713_conf_v1.fits  ext_seaton.fits  sensfunc_d1.fits  sensfunc_d11.fits
test/data/.svn/: all-wcprops  entries
test/data/.svn/text-base/: CMC_test.out.svn-base  GBLUE_0.0_conf_v0.fits.svn-base  GRED_0.0_conf_v0.fits.svn-base  axesim_d1_cos.conf.svn-base  axesim_d1_det.conf.svn-base  axesim_d2.conf.svn-base  axesim_d2_cos.conf.svn-base  axesim_d2_det.conf.svn-base  axesim_d2_zero.conf.svn-base  axesim_d3.conf.svn-base  axesim_d3_2PSF.conf.svn-base  axesim_d3_cos.conf.svn-base  axesim_d3_det.conf.svn-base  axesim_d4_2PSF.conf.svn-base  axesim_d4_det.conf.svn-base  input_cat_test.spc.fits.svn-base  input_cat_thumbs.dat.svn-base  noise_spc.dat.svn-base  noise_spc.fits.svn-base  sensfunc_d2.fits.svn-base  sensfunc_d21.fits.svn-base  thumbnails.fits.svn-base
test/testaxesim/: testaxesimDir.py
test/testaxesim/.svn/: all-wcprops  entries
test/testaxesim/.svn/text-base/: __init__.pyc.svn-base  testaxesimDir.pyc.svn-base  testaxesimDisp.py.svn-base  testaxesimDisp.pyc.svn-base
test/testtips/.svn/: all-wcprops  entries
test/testtips/CONF/: Gblue0.conf  Gred0.conf
test/testtips/CONF/.svn/: all-wcprops  entries
test/testverify/: __init__.py  verify.py
test/testverify/.svn/: all-wcprops  entries
test/testverify/.svn/text-base/: testVerifyFlux.py.svn-base  testVerifyFlux.pyc.svn-base  testVerifyWave.py.svn-base  testVerifyWave.pyc.svn-base  verify.pyc.svn-base
test/verifyData/: galaxyThumbs.fits  input_cat_verifyIV.fits  input_flat.spc.fits  mef_c4.00000_x-0.38167_y1.08146.fits  mef_c4.00000_x0.28625_y1.17167.fits  verificationConfI.conf
test/verifyData/.svn/: all-wcprops  entries
test/verifyTests/.svn/: all-wcprops  entries
(+9 files in other folders)
